# uma-fan-tally-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  post-report.yml
icons/: README.md
src/uma_tally_tool/: __main__.py  app.py  batch.py  bootstrap.py  client.py  compute.py  config.example.env  config.py  discord.py  icons.py  model.py
src/uma_tally_tool/render/: __init__.py  base.py  classic.py  themes.py
tests/: test_app.py  test_batch.py  test_cli.py  test_client.py  test_compute.py  test_icons.py  test_render_layout.py
